src/snapshots/crochet__parser__tests__operations.snap
---
source: src/parser.rs
expression: "parse(\"1 + 2 - 3\")"
---
Program {
    body: [
        Expr {
            span: 0..9,
            expr: Op(
                Op {
                    span: 0..9,
                    op: Sub,
                    left: Op(
                        Op {
                            span: 0..5,
                            op: Add,
                            left: Lit(
                                Num(
                                    Num {
                                        span: 0..1,
                                        value: "1",
                                    },
                                ),
                            ),
                            right: Lit(
                                Num(
                                    Num {
                                        span: 4..5,
                                        value: "2",
                                    },
                                ),
                            ),
                        },
                    ),
                    right: Lit(
                        Num(
                            Num {
                                span: 8..9,
                                value: "3",
                            },
                        ),
                    ),
                },
            ),
        },
    ],
}
