src/snapshots/crochet__parser__tests__top_level_expressions-2.snap
---
source: src/parser.rs
expression: "parse(\"123\\n\\\"hello\\\"\")"
---
Program {
    body: [
        Expr {
            span: 0..3,
            expr: Lit(
                Num(
                    Num {
                        span: 0..3,
                        value: "123",
                    },
                ),
            ),
        },
        Expr {
            span: 4..11,
            expr: Lit(
                Str(
                    Str {
                        span: 4..11,
                        value: "hello",
                    },
                ),
            ),
        },
    ],
}
