src/snapshots/crochet__parser__tests__type_annotations-3.snap
---
source: src/parser.rs
expression: "parse(\"let add = (a: number, b: number) => a + b\")"
---
Program {
    body: [
        Decl {
            span: 0..41,
            pattern: Ident(
                BindingIdent {
                    span: 4..7,
                    id: Ident {
                        span: 4..7,
                        name: "add",
                    },
                    type_ann: None,
                },
            ),
            value: Lambda(
                Lambda {
                    span: 10..41,
                    args: [
                        Ident(
                            BindingIdent {
                                span: 11..20,
                                id: Ident {
                                    span: 11..20,
                                    name: "a",
                                },
                                type_ann: Some(
                                    Prim(
                                        PrimType {
                                            span: 14..20,
                                            prim: Num,
                                        },
                                    ),
                                ),
                            },
                        ),
                        Ident(
                            BindingIdent {
                                span: 22..31,
                                id: Ident {
                                    span: 22..31,
                                    name: "b",
                                },
                                type_ann: Some(
                                    Prim(
                                        PrimType {
                                            span: 25..31,
                                            prim: Num,
                                        },
                                    ),
                                ),
                            },
                        ),
                    ],
                    body: Op(
                        Op {
                            span: 36..41,
                            op: Add,
                            left: Ident(
                                Ident {
                                    span: 36..37,
                                    name: "a",
                                },
                            ),
                            right: Ident(
                                Ident {
                                    span: 40..41,
                                    name: "b",
                                },
                            ),
                        },
                    ),
                    is_async: false,
                },
            ),
        },
    ],
}
