src/snapshots/crochet__parser__tests__type_annotations-4.snap
---
source: src/parser.rs
expression: "parse_type(\"Promise<number>\")"
---
TypeRef(
    TypeRef {
        span: 0..15,
        name: "Promise",
        type_params: Some(
            [
                Prim(
                    PrimType {
                        span: 8..14,
                        prim: Num,
                    },
                ),
            ],
        ),
    },
)
