src/snapshots/crochet__parser__tests__type_annotations-6.snap
---
source: src/parser.rs
expression: "parse(\"let FOO: \\\"foo\\\" = \\\"foo\\\"\")"
---
Program {
    body: [
        Decl {
            span: 0..22,
            pattern: Ident(
                BindingIdent {
                    span: 4..14,
                    id: Ident {
                        span: 4..14,
                        name: "FOO",
                    },
                    type_ann: Some(
                        Lit(
                            LitType {
                                span: 9..14,
                                lit: Str(
                                    Str {
                                        span: 9..14,
                                        value: "foo",
                                    },
                                ),
                            },
                        ),
                    ),
                },
            ),
            value: Lit(
                Str(
                    Str {
                        span: 17..22,
                        value: "foo",
                    },
                ),
            ),
        },
    ],
}
